upload all files

--- a/products/platingcoating/brassplating/troubleshootingbrass/index.html
+++ b/products/platingcoating/brassplating/troubleshootingbrass/index.html
@@ -4,16 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- === SEO (i18n-ready) === -->
   <title data-i18n-key="meta_title">Meta Conducting Salt • เกลือทองเหลือง (เหลือง-แดงเข้ม) | Baume Chemical</title>
   <meta name="description" content="ระบบชุบทองเหลืองไซยาไนด์สำหรับงานตกแต่ง โทนสีเหลืองถึงทองแดงแดง คุมโทนได้ด้วยอุณหภูมิ/กระแส/อัตราส่วน Cu:Zn ใช้ได้ทั้งถังแขวน/ถังกลิ้ง พร้อมสเปกและแนวทางผสม/บำรุงรักษา">
   <meta name="robots" content="index,follow,max-image-preview:large">
   <meta name="theme-color" content="#2c5e4e">
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/brassplating/index.html">
+  <link rel="alternate" hreflang="th" href="https://www.baumechemical.com/products/platingcoating/brassplating/index.html">
+  <link rel="alternate" hreflang="en" href="https://www.baumechemical.com/products/platingcoating/brassplating/index.html">
+  <link rel="alternate" hreflang="x-default" href="https://www.baumechemical.com/products/platingcoating/brassplating/index.html">
 
   <!-- Open Graph -->
   <meta property="og:type" content="product">
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="Meta Conducting Salt • Cyanide Brass (Yellow–Red)">
   <meta property="og:description" content="Decorative cyanide brass: tunable yellow→rich red tone, smooth coverage, rack & barrel.">
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/brassplating/index.html">
   <meta property="og:image" content="https://img2.pic.in.th/pic/thumbnail-1.jpg">
   <meta name="twitter:card" content="summary_large_image">
 
@@ -358,13 +364,9 @@
         meta_desc:"ระบบชุบทองเหลืองไซยาไนด์สำหรับงานตกแต่ง โทนสีเหลืองถึงทองแดงแดง คุมโทนได้ด้วยอุณหภูมิ/กระแส/อัตราส่วน Cu:Zn ใช้ได้ทั้งถังแขวน/ถังกลิ้ง พร้อมสเปกและแนวทางผสม/บำรุงรักษา",
         og_title:"Meta Conducting Salt • Cyanide Brass (Yellow–Red)",
         og_desc:"ปรับโทนสีได้กว้าง ผิวเรียบ Rack & Barrel",
-
-        badge1:"Cyanide Brass",
-        badge2:"Yellow → Rich Red Tone",
-        badge3:"Rack & Barrel",
+        badge1:"Cyanide Brass", badge2:"Yellow → Rich Red Tone", badge3:"Rack & Barrel",
         hero_title:"Meta Conducting Salt — เกลือทองเหลือง (เหลือง-แดงเข้ม)",
         hero_tagline:"ชุบทองเหลืองตกแต่ง โทนสีปรับได้ตามอุณหภูมิ/กระแส/อัตราส่วนโลหะ ให้ผิวเรียบและคลุมสม่ำเสมอ",
-
         features_title:"คุณสมบัติพิเศษ",
         features_lead:"ออกแบบเพื่อความสวยงามและคุมโทนสีได้กว้าง เหมาะทั้งงานแขวนและงานกลิ้ง",
         f1_t:"ปรับโทนสีได้", f1_d:"เหลืองอ่อน → ทองแดงแดง ปรับด้วยอุณหภูมิ/กระแส/อัตราส่วน Cu:Zn",
@@ -373,7 +375,6 @@
         f4_t:"ควบคุมง่าย", f4_d:"ติดตาม Cu/Zn/ฟรีไซยาไนด์ °Bé 12–15 ปรับเติมตรงไปตรงมา",
         f5_t:"ยืดหยุ่นต่ออุปกรณ์", f5_d:"ใช้ได้กับถังเหล็กบุ/พลาสติก ระบบกวน/กรองมาตรฐาน",
         f6_t:"ตกแต่งทนหมอง", f6_d:"รองรับขั้นตอนกันหมองหลังชุบเพื่อเพิ่มอายุการใช้งาน",
-
         product_title:"ข้อมูลผลิตภัณฑ์",
         pi_type:"ประเภท: น้ำยาชุบทองเหลืองไซยาไนด์ (Meta Conducting Salt + Ammonium Chloride)",
         pi_finish:"ฟิล์ม/สี: เงากึ่งเงา โทนเหลืองถึงทองแดงแดง ปรับโทนได้กว้าง",
@@ -381,31 +382,26 @@
         pi_ctrl:"ควบคุมหลัก: Cu 8.5–9.5 g/L, Zn 7.5–8.5 g/L, Free NaCN 14–16 g/L, pH 9.8–10.8, °Bé 12–15",
         pi_ops:"เงื่อนไขทำงาน: 50–55 °C (ช่วง 45–60 °C), 0.54–0.86 A/dm² (5–8 ASF), 3.4–4.0 V",
         pi_anode:"แอโนด: ทองเหลือง 60/40 หรือ 70/30 (โทนแดงเข้ม) เกรดบริสุทธิ์ ปลอดตะกั่ว",
-
         specs_title:"สเปก & เงื่อนไขการทำงาน",
         head_param:"พารามิเตอร์", head_rec:"ค่าที่เหมาะสม", head_range:"ช่วง",
         sp_salt:"Meta Conducting Salt", sp_nh4cl:"Ammonium Chloride",
         sp_pH:"pH", sp_temp:"อุณหภูมิ", sp_cd:"ความหนาแน่นกระแส", sp_volt:"แรงดันไฟฟ้า",
         sp_color:"ปรับโทนสี", sp_color_rec:"อุ่น/กระแสสูง/เพิ่ม Cu → โทนแดงขึ้น", sp_color_rng:"เย็น/กระแสต่ำ/เพิ่ม Zn → โทนเหลืองขึ้น",
-
         mixing_title:"ตัวอย่างการผสม (บ่อใหม่)",
         mixing_lead:"เติม Meta Conducting Salt ให้ละลายใส → เติม NH4Cl → เติมน้ำจนครบ ปรับอุณหภูมิ",
         mix_head_vol:"ปริมาตรบ่อ", mix_head_salt:"Meta Conducting Salt", mix_head_nh4:"Ammonium Chloride", mix_head_water:"น้ำกลั่น",
         mix_to_vol:"จนครบปริมาตร", mix_to_vol_1000:"จนครบปริมาตร",
         mix_note_1:"เริ่มด้วยน้ำ ~2/3 บ่อ กวนจนใสก่อนปรับปริมาตร",
         mix_note_2:"ปรับ pH ขึ้นได้ด้วย NaOH (ห้ามเติมกรดลงในบ่อไซยาไนด์เด็ดขาด)",
-
         equip_title:"อุปกรณ์ที่แนะนำ",
         eq1:"ถังเหล็กเชื่อม/ถังบุ PVC/ยาง ทนด่างและไซยาไนด์",
         eq2:"ระบบให้ความร้อนสำหรับงานอุ่น พร้อมดูดไอ/ระบายอากาศ",
         eq3:"คานแอโนด/แคโทด แน่นหนา ถุงผ้าทนด่างสำหรับแอโนด",
-
         maint_title:"การบำรุงรักษา & การควบคุม",
         m1:"วิเคราะห์รายสัปดาห์: Cu 8.5–9.5 g/L, Zn 7.5–8.5 g/L, Free NaCN 14–16 g/L",
         m2:"ช่วงเริ่มต้นบ่อ เติม NH4Cl 2–3 g/L รายวันเพื่อคงสภาพแอมโมเนีย",
         m3:"เพิ่ม °Bé ทีละ 1 คะแนน → เติม Meta Conducting Salt ~15 g/L (ละลายน้ำก่อน)",
         m4:"ติดตามอุณหภูมิ/กระแส และบันทึกการเติมทุกกะ",
-
         process_title:"ลำดับกระบวนการแนะนำ",
         pr1:"ต้มล้างไขมัน B1 40–60 g/L @ 80 °C, 2–5 นาที → ล้างน้ำ",
         pr2:"แยกไฟฟ้า E-60 80 g/L @ 70 °C, 2–3 นาที, 50–100 ASF → ล้างน้ำ",
@@ -414,53 +410,42 @@
         pr5:"ชุบทองเหลือง: ให้ความหนา ≥0.6–1.0 µm",
         pr6:"ล้างน้ำ → จุ่มกรดกำมะถัน 2–3% เพื่อล้างคราบไซยาไนด์บนผิว (ทำในถังแยก มีดูดไอ) → ล้างน้ำ",
         pr7:"จุ่มกันหมองทองแดง-ทองเหลือง → เป่าลม/อบแห้ง",
-
         anode_title:"แผ่นล่อ (Anodes)",
         anode_desc:"ใช้ทองเหลือง 60% Cu / 40% Zn สำหรับโทนมาตรฐาน หรือ 70% Cu / 30% Zn เมื่อต้องการโทนแดงเข้ม แนะนำเกรดบริสุทธิ์ ปลอดตะกั่ว และสวมถุงผ้าทนด่าง",
-
         tr_title:"แนวทางแก้ปัญหาเบื้องต้น",
         tr_adh_h:"1) ยึดเกาะไม่สมบูรณ์/ร่อน",
         tr_adh_1:"Meta Salt ต่ำ → เติมเกลือทองเหลือง (ทดสอบทีละ 1 g/L)",
         tr_adh_2:"Free CN ต่ำ (เมือก/ผลึกเขียว-ขาว) → เติม NaCN ตามวิเคราะห์",
         tr_adh_3:"ผิวไม่สะอาด/มีฟิล์มด่าง → ทบทวนล้าง/แอคติเวต",
-
         tr_color_cu_h:"2) สีออกทองแดงมากเกิน",
         tr_color_cu_1:"อุณหภูมิสูงเกิน → ลด ~50 °C",
         tr_color_cu_2:"แอมโมเนียต่ำ → เติม NH4Cl 1.5–3 g/L",
         tr_color_cu_3:"Zn ต่ำ → เติม Zinc Cyanide (ทดสอบ Hull Cell)",
         tr_color_cu_4:"Free CN ไม่สมดุล → ปรับกลับช่วง",
-
         tr_pale_h:"3) สีเหลืองซีด",
         tr_pale_1:"อุณหภูมิต่ำ → อุ่น 40–50 °C",
         tr_pale_2:"Cu ต่ำ → เติม Copper Cyanide 5 g/L ทีละน้อยจนได้โทน",
         tr_pale_3:"Free CN ต่ำ → เติม NaCN ตามวิเคราะห์",
         tr_pale_4:"กระแสสูงไป → ลด CD",
-
         tr_anode_h:"4) อาการผิดปกติที่แอโนด",
         tr_anode_white:"ตะกอนขาวที่แอโนด → เติม NH4Cl 1.5–3 g/L",
         tr_anode_glossy:"แอโนดเงา/เป็นเกล็ด → Free CN สูงเกิน → ปรับลด",
         tr_anode_black:"ฟิล์มดำ → ปนเปื้อนตะกั่ว/ขาดไซยาไนด์ → เปลี่ยนแอโนด/ปรับ CN",
-
         tr_rough_h:"5) ผิวหยาบ/เป็นจุด/เป็นดวง",
         tr_rough_1:"ของแข็งแขวนลอย → พักตกตะกอน/กรองคาร์บอนอย่างควบคุม",
         tr_rough_2:"น้ำยาขังในซอกรูชิ้นงาน → ปรับท่าทางชิ้นงาน/แกว่งในน้ำร้อน-เย็น",
         tr_rough_3:"ล้างหลังชุบไม่พอ → เปลี่ยนน้ำล้าง/ล้างหลายขั้น",
-
         tr_misc_h:"6) อื่นๆ",
         tr_misc_1:"ชุบติดช้าพร้อมฟองที่แคโทดมาก → Free CN สูงหรือโลหะต่ำ → ปรับตามวิเคราะห์",
         tr_misc_2:"น้ำยาสีเขียว → สังกะสี/ซัลเฟตเกิน → จำกัด Zn เติมสูงสุด 5 g/L และตรวจแหล่งปนเปื้อน",
-
         ehs_title:"ความปลอดภัย & สิ่งแวดล้อม (ไซยาไนด์)",
         ehs1:"ห้ามเติมกรดลงในบ่อ/ของเสียที่มีไซยาไนด์—เสี่ยงเกิดก๊าซ HCN",
         ehs2:"สวม PPE (ถุงมือกันสารเคมี แว่นตา หน้ากากเหมาะสม) และใช้ระบบดูดไอ",
         ehs3:"ขั้นตอนจุ่มกรดหลังชุบทำในถังแยก มีดูดไอ/แนวปฏิบัติที่ปลอดภัยเท่านั้น",
         ehs4:"บำบัดน้ำเสียไซยาไนด์ตามกฎหมาย (ออกซิไดซ์เป็นไซยาเนตในด่าง ฯลฯ) และเฝ้าระวัง pH",
         note_ppe:"*หากกระเด็นเข้าตา ล้างน้ำต่อเนื่อง ≥15 นาที และพบแพทย์",
-
-        footer_products:"หมวดผลิตภัณฑ์",
-        footer_contact:"ติดต่อเรา",
-        footer_copy:"© 2025 Baume Chemical. All rights reserved.",
-        footer_hours:"🕒 เวลาทำการ 08.00 - 17.00 น.",
+        footer_products:"หมวดผลิตภัณฑ์", footer_contact:"ติดต่อเรา",
+        footer_copy:"© 2025 Baume Chemical. All rights reserved.", footer_hours:"🕒 เวลาทำการ 08.00 - 17.00 น.",
         cat_pretreat:"เตรียมผิว (Pretreatment)", cat_plating:"ชุบเคลือบ (Plating)", cat_black:"ดำเคมี (Blackening)",
         cat_passivation:"พาสซิเวชัน (Passivation)", cat_polishing:"ขัดเงา (Polishing)", cat_strippers:"น้ำยาลอก (Strippers)",
         cat_protective:"ปกป้องผิว (Protective Treatment)", cat_service:"บริการ (Customer Service)", cat_equipment:"อุปกรณ์ (Equipment)"
@@ -470,13 +455,9 @@
         meta_desc:"Decorative cyanide brass with tunable yellow→rich red tone via temperature/current/Cu:Zn ratio. Smooth coverage for rack & barrel. Specs, make-up, maintenance included.",
         og_title:"Meta Conducting Salt • Cyanide Brass (Yellow–Red)",
         og_desc:"Tunable tone, smooth deposit, rack & barrel ready.",
-
-        badge1:"Cyanide Brass",
-        badge2:"Yellow → Rich Red Tone",
-        badge3:"Rack & Barrel",
+        badge1:"Cyanide Brass", badge2:"Yellow → Rich Red Tone", badge3:"Rack & Barrel",
         hero_title:"Meta Conducting Salt — Brass Plating (Yellow–Deep Red)",
         hero_tagline:"Decorative brass with adjustable tone, smooth coverage, and easy control.",
-
         features_title:"Key Features",
         features_lead:"Built for wide color control and consistent finish on rack or barrel lines.",
         f1_t:"Wide tone control", f1_d:"Yellow → coppery red via temp/current/Cu:Zn",
@@ -485,7 +466,6 @@
         f4_t:"Straightforward control", f4_d:"Track Cu/Zn/free CN; °Bé 12–15",
         f5_t:"Equipment-friendly", f5_d:"Steel-lined/plastic tanks; standard agitation/filtration",
         f6_t:"Anti-tarnish ready", f6_d:"Supports post-dip to extend appearance life",
-
         product_title:"Product Information",
         pi_type:"Type: cyanide brass (Meta Conducting Salt + Ammonium Chloride)",
         pi_finish:"Finish/color: semi-bright to bright; yellow to copper-red (tunable)",
@@ -493,31 +473,26 @@
         pi_ctrl:"Primary controls: Cu 8.5–9.5 g/L; Zn 7.5–8.5 g/L; free NaCN 14–16 g/L; pH 9.8–10.8; °Bé 12–15",
         pi_ops:"Operating: 50–55 °C (range 45–60 °C); 0.54–0.86 A/dm² (5–8 ASF); 3.4–4.0 V",
         pi_anode:"Anodes: brass 60/40 (standard) or 70/30 (deeper red), high-purity, lead-free",
-
         specs_title:"Specs & Operating Conditions",
         head_param:"Parameter", head_rec:"Optimal", head_range:"Range",
         sp_salt:"Meta Conducting Salt", sp_nh4cl:"Ammonium Chloride",
         sp_pH:"pH", sp_temp:"Temperature", sp_cd:"Current density", sp_volt:"Voltage",
         sp_color:"Tone control", sp_color_rec:"Warm/high current/more Cu → redder", sp_color_rng:"Cool/low current/more Zn → yellower",
-
         mixing_title:"Make-up Examples (new bath)",
         mixing_lead:"Dissolve Meta Conducting Salt to clarity → add NH4Cl → top up and set temperature.",
         mix_head_vol:"Bath volume", mix_head_salt:"Meta Conducting Salt", mix_head_nh4:"Ammonium Chloride", mix_head_water:"DI water",
         mix_to_vol:"Top up to volume", mix_to_vol_1000:"Top up to volume",
         mix_note_1:"Start with ~2/3 tank of water; dissolve fully before topping up.",
         mix_note_2:"Raise pH with NaOH if needed. <strong>Never add acid</strong> to cyanide baths.",
-
         equip_title:"Recommended Equipment",
         eq1:"Welded steel/plastic-lined tanks resistant to alkali & cyanide",
         eq2:"Heating for warm operation with proper fume extraction",
         eq3:"Robust anode/cathode bars; alkali-resistant anode bags",
-
         maint_title:"Maintenance & Control",
         m1:"Weekly analysis: Cu 8.5–9.5; Zn 7.5–8.5 g/L; free NaCN 14–16 g/L",
         m2:"During start-up, add NH4Cl 2–3 g/L daily to maintain ammoniacal balance",
         m3:"Raise °Bé by 1 → add ~15 g/L Meta Conducting Salt (pre-dissolved)",
         m4:"Log temperature/current/additions each shift",
-
         process_title:"Suggested Process Sequence",
         pr1:"Alkaline soak clean B1 40–60 g/L @ 80 °C, 2–5 min → rinse",
         pr2:"Electroclean E-60 80 g/L @ 70 °C, 2–3 min, 50–100 ASF → rinse",
@@ -526,53 +501,42 @@
         pr5:"Brass plate to ≥0.6–1.0 µm",
         pr6:"Rinse → sulfuric 2–3% to neutralize surface cyanide (separate, vented tank) → rinse",
         pr7:"Anti-tarnish dip → blow off / dry",
-
         anode_title:"Anodes",
         anode_desc:"Use brass 60% Cu / 40% Zn for standard tone or 70% Cu / 30% Zn for deeper red; high-purity, lead-free, bagged.",
-
         tr_title:"Basic Troubleshooting",
         tr_adh_h:"1) Poor adhesion / peeling",
         tr_adh_1:"Meta salt low → add (test ~1 g/L steps)",
         tr_adh_2:"Free CN low (green-white slime/crystals) → add NaCN per analysis",
         tr_adh_3:"Surface film/alkali residue → improve cleaning/activation",
-
         tr_color_cu_h:"2) Too copper-red color",
         tr_color_cu_1:"Temperature too high → lower to ~50 °C",
         tr_color_cu_2:"Ammonia low → add NH4Cl 1.5–3 g/L",
         tr_color_cu_3:"Zn low → add zinc cyanide (verify via Hull Cell)",
         tr_color_cu_4:"Free CN imbalance → correct to range",
-
         tr_pale_h:"3) Pale yellow",
         tr_pale_1:"Temperature too low → heat 40–50 °C",
         tr_pale_2:"Cu low → add copper cyanide ~5 g/L in small steps",
         tr_pale_3:"Free CN low → add NaCN per analysis",
         tr_pale_4:"Current too high → reduce CD",
-
         tr_anode_h:"4) Anode symptoms",
         tr_anode_white:"White deposit → add NH4Cl 1.5–3 g/L",
         tr_anode_glossy:"Glossy/flake anode → free CN too high → reduce",
         tr_anode_black:"Black film → lead contamination or low CN → replace anode / adjust CN",
-
         tr_rough_h:"5) Rough/spotty/blotchy",
         tr_rough_1:"Suspended solids → settle overnight / controlled carbon + filtration",
         tr_rough_2:"Entrapped solution in pores → hot/cold rinse swings; adjust racking",
         tr_rough_3:"Insufficient rinsing → refresh rinse stages",
-
         tr_misc_h:"6) Misc",
         tr_misc_1:"Slow build with heavy cathode gassing → free CN high or metals low",
         tr_misc_2:"Bath turns green → excess Zn/sulfate; cap Zn to ≤5 g/L & find contamination source",
-
         ehs_title:"Safety & Environment (Cyanide)",
         ehs1:"Do <strong>not</strong> add acids to cyanide baths/waste—HCN gas hazard.",
         ehs2:"Use proper PPE (chemical gloves, goggles, suitable respirator) and fume extraction.",
         ehs3:"Acid dip after plating must be in a separate, vented tank with safe SOPs.",
         ehs4:"Treat cyanide waste per regulations (alkaline chlorination to cyanate, etc.); control pH.",
         note_ppe:"*If splashed into eyes, rinse continuously ≥15 min and seek medical care.",
-
-        footer_products:"Products",
-        footer_contact:"Contact Us",
-        footer_copy:"© 2025 Baume Chemical. All rights reserved.",
-        footer_hours:"🕒 Hours 08:00–17:00",
+        footer_products:"Products", footer_contact:"Contact Us",
+        footer_copy:"© 2025 Baume Chemical. All rights reserved.", footer_hours:"🕒 Hours 08:00–17:00",
         cat_pretreat:"Pretreatment", cat_plating:"Plating", cat_black:"Blackening",
         cat_passivation:"Passivation", cat_polishing:"Polishing", cat_strippers:"Strippers",
         cat_protective:"Protective Treatment", cat_service:"Customer Service", cat_equipment:"Equipment"
