--- a/products/blackening/index.html
+++ b/products/blackening/index.html
@@ -10,6 +10,10 @@
   <meta name="robots" content="index,follow,max-image-preview:large">
   <link rel="canonical" href="https://www.baumechemical.com/products/blackening/">
   <meta name="theme-color" content="#2c5e4e">
+  <link rel="canonical" href="https://www.baumechemical.com/products/blackening/">
+  <link rel="alternate" hreflang="th" href="https://www.baumechemical.com/products/blackening/">
+  <link rel="alternate" hreflang="en" href="https://www.baumechemical.com/products/blackening/">
+  <link rel="alternate" hreflang="x-default" href="https://www.baumechemical.com/products/blackening/">
 
   <!-- Open Graph / Twitter -->
   <meta property="og:locale" id="ogLocale" content="th_TH">
