upload all files

--- a/about-us.html
+++ b/about-us.html
@@ -382,7 +382,7 @@
       <ul class="bullets">
         <li><i class="fa-solid fa-flask"></i><span data-i18n-key="svc_1">จำหน่ายน้ำยาชุบโลหะและอุปกรณ์ติดตั้งไลน์ชุบ</span></li>
         <li><i class="fa-solid fa-user-gear"></i><span data-i18n-key="svc_2">ให้คำปรึกษากระบวนการชุบและการตั้งค่าไลน์</span></li>
-        <li><i class="fa-solid fa-eraser"></i><span data-i18n-html="true" data-i18n-key="svc_3">นำเข้าเคมีภัณฑ์สำหรับ <em>ลอกผิวโลหะ (Strippers)</em></span></li>
+        <li><i class="fa-solid fa-eraser"></i><span data-i18n-html="true" data-i18n-key="svc_3">นำเข้าเคมีภัณฑ์เพื่อเคลือบผิวโลหะโดยเฉพาะ</span></li>
         <li><i class="fa-solid fa-screwdriver-wrench"></i><span data-i18n-key="svc_4">ขัดเงาโลหะด้วยเคมี ทั้งแบบใช้ไฟฟ้าและไม่ใช้ไฟฟ้า</span></li>
         <li><i class="fa-solid fa-gears"></i><span data-i18n-key="svc_5">รองรับวัสดุ: เหล็ก, สแตนเลส, ทองเหลือง, ทองแดง, อลูมิเนียม</span></li>
         <li><i class="fa-solid fa-droplet"></i><span data-i18n-key="svc_6">งานล้างผิวที่ไม่ทำลายเนื้อโลหะ (Non-etching cleaning)</span></li>
@@ -599,7 +599,7 @@
         services_title: "เราให้บริการอะไรบ้าง",
         svc_1: "จำหน่ายน้ำยาชุบโลหะและอุปกรณ์ติดตั้งไลน์ชุบ",
         svc_2: "ให้คำปรึกษากระบวนการชุบและการตั้งค่าไลน์",
-        svc_3: "นำเข้าเคมีภัณฑ์สำหรับ <em>ลอกผิวโลหะ (Strippers)</em>",
+        svc_3: "นำเข้าเคมีภัณฑ์เพื่อเคลือบผิวโลหะโดยเฉพาะ",
         svc_4: "ขัดเงาโลหะด้วยเคมี ทั้งแบบใช้ไฟฟ้าและไม่ใช้ไฟฟ้า",
         svc_5: "รองรับวัสดุ: เหล็ก, สแตนเลส, ทองเหลือง, ทองแดง, อลูมิเนียม",
         svc_6: "งานล้างผิวที่ไม่ทำลายเนื้อโลหะ (Non-etching cleaning)",
@@ -652,7 +652,7 @@
         services_title: "What We Provide",
         svc_1: "Supply of plating chemicals & line setup equipment",
         svc_2: "Process consulting & line parameter setup",
-        svc_3: "Imported chemicals for <em>metal stripping (Strippers)</em>",
+        svc_3: "Importing chemicals specifically for metal finishing",
         svc_4: "Chemical polishing, both electro and non-electro",
         svc_5: "Materials: steel, stainless, brass, copper, aluminium",
         svc_6: "Non-etching cleaning processes for base-metal safety",
