upload all files

--- a/products/platingcoating/brassplating/troubleshootingbrassnoncyanide/index.html
+++ b/products/platingcoating/brassplating/troubleshootingbrassnoncyanide/index.html
@@ -8,6 +8,10 @@
   <title id="metaTitle">Imitation Brass (Non-Cyanide) • กระบวนการชุบทองเหลืองเลียนแบบ | Baume Chemical</title>
   <meta name="description" id="metaDesc" content="ชุบทองเหลืองเลียนแบบแบบไม่ใช้ไซยาไนด์ สีทอง-โรสโกลด์ (≈14–22K) ควบคุมง่าย ใช้ได้ทั้งแร็ค/บาร์เรล แนะนำ 55 °C pH≈12 กรองต่อเนื่อง 10 µm พร้อมแนวทางตั้งบ่อ/ดูแล/แก้ปัญหา">
   <meta name="robots" content="index,follow,max-image-preview:large">
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/brassplating/troubleshootingbrassnoncyanide/index.html">
+  <link rel="alternate" hreflang="th" href="https://www.baumechemical.com/products/platingcoating/brassplating/troubleshootingbrassnoncyanide/index.html">
+  <link rel="alternate" hreflang="en" href="https://www.baumechemical.com/products/platingcoating/brassplating/troubleshootingbrassnoncyanide/index.html">
+  <link rel="alternate" hreflang="x-default" href="https://www.baumechemical.com/products/platingcoating/brassplating/troubleshootingbrassnoncyanide/index.html">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter -->
@@ -15,6 +19,7 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" id="ogTitle" content="Imitation Brass (Non-Cyanide) • Decorative Brass">
   <meta property="og:description" id="ogDesc" content="Non-cyanide brass, tunable gold→rose gold tone, easy control, rack & barrel ready.">
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/brassplating/troubleshootingbrassnoncyanide/index.html">
   <meta property="og:image" content="https://img2.pic.in.th/pic/thumbnail-1.jpg">
   <meta property="og:image:alt" content="Non-cyanide imitation brass plating tone from gold to rose-gold">
   <meta property="og:locale" id="ogLocale" content="th_TH">
