--- a/products/platingcoating/copperplating/troubleshootingacidcopper/index.html
+++ b/products/platingcoating/copperplating/troubleshootingacidcopper/index.html
@@ -8,6 +8,7 @@
   <title id="metaTitle" data-i18n-key="meta_title">CopperBrite 900 • Acid Copper Bright | Baume Chemical</title>
   <meta name="description" id="metaDesc" content="น้ำยาชุบทองแดงกรดเงา (CopperBrite 900) เงาสูง เครียดต่ำ ยึดเกาะดี เข้าซอกเยี่ยม ควบคุมง่าย องค์ประกอบ: CuSO4 190–240 g/L, H2SO4 70–90 g/L, Cl⁻ 70–120 mg/L; 20–30 °C, pH < 1.0; ระบบสารเติมแต่ง MU/A/B">
   <meta name="robots" content="index,follow,max-image-preview:large">
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/copperplating/troubleshootingacidcopper/index.html">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter (i18n-updatable) -->
@@ -15,6 +16,7 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" id="ogTitle" content="CopperBrite 900 • Acid Copper Bright">
   <meta property="og:description" id="ogDesc" content="Bright acid copper: high brightness & leveling, low-stress deposits, easy control. CuSO4 190–240 g/L; H2SO4 70–90 g/L; Cl⁻ 70–120 mg/L.">
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/copperplating/troubleshootingacidcopper/index.html">
   <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail-2240c35936a6eea27.jpg">
   <meta property="og:image:alt" content="Bright acid copper plating bath CopperBrite 900">
   <meta property="og:locale" id="ogLocale" content="th_TH">
