--- a/products/platingcoating/copperplating/troubleshootingcoppercyanide/index.html
+++ b/products/platingcoating/copperplating/troubleshootingcoppercyanide/index.html
@@ -8,6 +8,7 @@
   <title id="metaTitle" data-i18n-key="meta_title">Cyanide Copper • น้ำยาชุบทองแดงด่าง | Baume Chemical</title>
   <meta name="description" id="metaDesc" content="ระบบชุบทองแดงไซยาไนด์ (อัลคาไลน์) สำหรับเหล็ก/ทองเหลือง/ซิงค์ไดคาสต์ ให้ผิวสม่ำเสมอ เกาะดี ครอบคลุมซอกมุม คุมง่าย รองรับนิเกิ้ลต่อ มีสูตรผสม/สเปก/การควบคุมครบ" />
   <meta name="robots" content="index,follow,max-image-preview:large" />
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/copperplating/troubleshootingcoppercyanide/index.html">
   <meta name="theme-color" content="#2c5e4e" />
 
   <!-- Open Graph / Twitter (i18n-updatable) -->
@@ -15,6 +16,7 @@
   <meta property="og:site_name" content="Baume Chemical" />
   <meta property="og:title" id="ogTitle" content="Cyanide Copper • Alkaline Copper Plating" />
   <meta property="og:description" id="ogDesc" content="Uniform, ductile deposit with strong throwing power on steel/brass/Zn die-cast. Clear specs, make-up, control & troubleshooting." />
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/copperplating/troubleshootingcoppercyanide/index.html">
   <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail-2240c35936a6eea27.jpg" />
   <meta property="og:image:alt" content="Cyanide copper plating bath" />
   <meta property="og:locale" id="ogLocale" content="th_TH" />
