--- a/products/platingcoating/copperplating/troubleshootingcoppernon-cyanide/index.html
+++ b/products/platingcoating/copperplating/troubleshootingcoppernon-cyanide/index.html
@@ -8,6 +8,7 @@
   <title id="metaTitle" data-i18n-key="meta_title">Copperlume 220 • Alkaline Copper (Cyanide-Free) | Baume Chemical</title>
   <meta name="description" id="metaDesc" content="น้ำยาชุบทองแดงด่างปลอดไซยาไนด์ (Copperlume 220) ผิวกึ่งเงา–เงา เกาะดี เข้าซอกเยี่ยม ใช้งานง่ายสำหรับเหล็ก/ทองเหลือง/ซิงค์ไดคาสต์/บรอนซ์/อะลูมิเนียมชุบสังกะสี คุม pH 8.5–10, 50–60 °C" />
   <meta name="robots" content="index,follow,max-image-preview:large" />
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/copperplating/troubleshootingcoppernon-cyanide/index.html">
   <meta name="theme-color" content="#2c5e4e" />
 
   <!-- Open Graph / Twitter (i18n-updatable) -->
@@ -15,6 +16,7 @@
   <meta property="og:site_name" content="Baume Chemical" />
   <meta property="og:title" id="ogTitle" content="Copperlume 220 • Alkaline Copper (Cyanide-Free)" />
   <meta property="og:description" id="ogDesc" content="Semi-bright to bright, cyanide-free copper: strong adhesion & throwing power; easy control for rack & barrel." />
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/copperplating/troubleshootingcoppernon-cyanide/index.html">
   <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail-2240c35936a6eea27.jpg" />
   <meta property="og:image:alt" content="Copperlume 220 product hero" />
   <meta property="og:locale" id="ogLocale" content="th_TH" />
