--- a/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer/index.html
+++ b/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer/index.html
@@ -8,6 +8,7 @@
   <title id="metaTitle" data-i18n-key="page_title">EPA 2020 แลคเกอร์ไฟฟ้า & แลคเกอร์น้ำ 2200 | Baume Chemical</title>
   <meta name="description" id="metaDesc" content="คู่มือแลคเกอร์ใส 2 ระบบในหน้าเดียว: EPA 2020 (แลคเกอร์ไฟฟ้า E-coat) และ แลคเกอร์น้ำ 2200 (Water-based Chromium-free) พร้อมวิธีผสม/สภาวะ/อบ/แก้ปัญหา/อุปกรณ์ และสวิตช์ภาษา TH/EN.">
   <meta name="robots" content="index,follow,max-image-preview:large" />
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer/index.html">
   <meta name="theme-color" content="#2c5e4e" />
 
   <!-- Open Graph / Twitter (i18n-updatable) -->
@@ -15,6 +16,7 @@
   <meta property="og:site_name" content="Baume Chemical" />
   <meta property="og:title" id="ogTitle" content="EPA 2020 & Water Lacquer 2200 • Clear Protective Coats" />
   <meta property="og:description" id="ogDesc" content="E-coat clear lacquer & water-based chromium-free lacquer in one page: specs, make-up, curing, troubleshooting." />
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer/index.html">
   <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/image0-174d2122a9ed67635.jpeg" />
   <meta property="og:image:alt" content="Clear lacquer coating products" />
   <meta property="og:locale" id="ogLocale" content="th_TH" />
