--- a/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html
@@ -8,6 +8,7 @@
   <title id="metaTitle" data-i18n-key="meta_title">BLACK NICKEL SALT • เกลือนิเกิ้ลดำ | Baume Chemical</title>
   <meta name="description" id="metaDesc" content="เกลือนิเกิ้ลดำสำหรับผสมน้ำยาชุบนิเกิ้ลดำ ให้ผิวดำเงาสม่ำเสมอ ใช้ได้กับทองเหลือง/งานชุบนิเกิ้ลเงา เหมาะกับชิ้นส่วนกล้อง แว่นตา อิเล็กทรอนิกส์ และจิวเวลรี่ ปรับเติมตามโบเม่ 9–10">
   <meta name="robots" content="index,follow,max-image-preview:large" />
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html">
   <meta name="theme-color" content="#2c5e4e" />
 
   <!-- === Open Graph / Twitter (i18n-updatable) === -->
@@ -16,6 +17,7 @@
   <meta property="og:locale" id="ogLocale" content="th_TH" />
   <meta property="og:title" id="ogTitle" content="BLACK NICKEL SALT • Black Nickel Plating Salt | Baume Chemical" />
   <meta property="og:description" id="ogDesc" content="Deep, glossy black finish. Works on brass or over bright-nickel. Low voltage, wide window. Optional lacquer topcoat." />
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html">
   <meta property="og:url" id="ogURL" content="" />
   <meta property="og:image" content="https://i.imgur.com/j7SpCDD.jpeg" />
   <meta property="og:image:alt" content="Black nickel plating bath" />
