--- a/products/platingcoating/nickelplating/troubleshootinghardchrome/index.html
+++ b/products/platingcoating/nickelplating/troubleshootinghardchrome/index.html
@@ -8,6 +8,7 @@
   <title id="metaTitle" data-i18n-key="meta_title">Decorex Conducting Salt • ยาเร่งซอกโครเมี่ยม (ชนิดผง) | Baume Chemical</title>
   <meta name="description" id="metaDesc" content="ผงเร่งซอกสำหรับฮาร์ดโครมและโครเมี่ยมเงา เพิ่มการเข้าซอก/กระแสต่ำ ช่วยให้ความหนาและความเงาใน LCD ใกล้เคียง HCD ใช้งานและบำรุงรักษาง่าย">
   <meta name="robots" content="index,follow,max-image-preview:large">
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootinghardchrome/index.html">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter (i18n-updatable) -->
@@ -16,6 +17,7 @@
   <meta property="og:locale" id="ogLocale" content="th_TH">
   <meta property="og:title" id="ogTitle" content="Decorex Conducting Salt • ยาเร่งซอกโครเมี่ยม (ชนิดผง)">
   <meta property="og:description" id="ogDesc" content="เพิ่มการเข้าซอก-กระแสต่ำให้ดีขึ้น ความหนา/ความเงา LCD ใกล้เคียง HCD เหมาะกับฮาร์ดโครมและโครเมี่ยมเงา">
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootinghardchrome/index.html">
   <meta property="og:url" id="ogURL" content="">
   <meta property="og:image" content="https://i.imgur.com/j7SpCDD.jpeg">
   <meta property="og:image:alt" content="Chrome plating bath">
