--- a/products/platingcoating/brassplating/troubleshootingbrass/index.html
+++ b/products/platingcoating/brassplating/troubleshootingbrass/index.html
@@ -8,10 +8,10 @@
   <title id="metaTitle">Meta Conducting Salt • เกลือทองเหลือง (เหลือง-แดงเข้ม) | Baume Chemical</title>
   <meta name="description" id="metaDesc" content="ระบบชุบทองเหลืองไซยาไนด์สำหรับงานตกแต่ง โทนสีเหลืองถึงทองแดงแดง คุมโทนได้ด้วยอุณหภูมิ/กระแส/อัตราส่วน Cu:Zn ใช้ได้ทั้งถังแขวน/ถังกลิ้ง พร้อมสเปกและแนวทางผสม/บำรุงรักษา">
   <meta name="robots" content="index,follow,max-image-preview:large">
-  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/brassplating/">
-  <link rel="alternate" hreflang="th" href="https://www.baumechemical.com/products/platingcoating/brassplating/">
-  <link rel="alternate" hreflang="en" href="https://www.baumechemical.com/products/platingcoating/brassplating/">
-  <link rel="alternate" hreflang="x-default" href="https://www.baumechemical.com/products/platingcoating/brassplating/">
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/brassplating/troubleshootingbrass/index.html">
+  <link rel="alternate" hreflang="th" href="https://www.baumechemical.com/products/platingcoating/brassplating/troubleshootingbrass/index.html">
+  <link rel="alternate" hreflang="en" href="https://www.baumechemical.com/products/platingcoating/brassplating/troubleshootingbrass/index.html">
+  <link rel="alternate" hreflang="x-default" href="https://www.baumechemical.com/products/platingcoating/brassplating/troubleshootingbrass/index.html">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter -->
@@ -20,7 +20,7 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" id="ogTitle" content="Meta Conducting Salt • Cyanide Brass (Yellow–Red)">
   <meta property="og:description" id="ogDesc" content="Decorative cyanide brass: tunable yellow→rich red tone, smooth coverage, rack & barrel.">
-  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/brassplating/">
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/brassplating/troubleshootingbrass/index.html">
   <meta property="og:image" content="https://img2.pic.in.th/pic/thumbnail-1.jpg">
   <meta property="og:image:alt" content="Brass plating bath producing yellow-to-deep-red tone">
   <meta name="twitter:card" content="summary_large_image">
