--- a/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquerpolyurethane/index.html
+++ b/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquerpolyurethane/index.html
@@ -8,6 +8,7 @@
   <title id="metaTitle" data-i18n-key="page_title">LT 3405 โพลียูรีเทน แลคเกอร์ไฟฟ้า | Baume Chemical</title>
   <meta name="description" id="metaDesc" content="LT 3405 โพลียูรีเทนแลคเกอร์ไฟฟ้า (Polyurethane E-coat) ฟิล์มใส แข็ง ทนสารเคมี/ความชื้น สเปกการทำงาน วิธีผสม อบ บำรุงรักษา และการแก้ปัญหา แบบสองภาษา TH/EN.">
   <meta name="robots" content="index,follow,max-image-preview:large" />
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquerpolyurethane/index.html">
   <meta name="theme-color" content="#2c5e4e" />
 
   <!-- Open Graph / Twitter (i18n-updatable) -->
@@ -15,6 +16,7 @@
   <meta property="og:site_name" content="Baume Chemical" />
   <meta property="og:title" id="ogTitle" content="LT 3405 Polyurethane E-coat • Clear, Hard, Chemical-Resistant" />
   <meta property="og:description" id="ogDesc" content="Operating window, make-up, curing, maintenance & troubleshooting in TH/EN." />
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquerpolyurethane/index.html">
   <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/image0-174d2122a9ed67635.jpeg" />
   <meta property="og:image:alt" content="Polyurethane electrophoretic clear coat" />
   <meta property="og:locale" id="ogLocale" content="th_TH" />
