--- a/products/platingcoating/nickelplating/troubleshootingennickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingennickel/index.html
@@ -8,6 +8,7 @@
   <title id="metaTitle" data-i18n-key="meta_title">KEMTEK NI-508 • ชุบนิกเกิลไม่ใช้ไฟฟ้า (ฟอสฟอรัสปานกลาง) | Baume Chemical</title>
   <meta name="description" id="metaDesc" content="กระบวนการ EN (Mid-P ≥7%P) เสถียร เงาสูง แข็ง/ทนสึกหรอ อัตราการสะสม ~13–20 µm/h ใช้ได้ทั้งถังแขวนและถังกลิ้ง พร้อมสเปก/สูตรผสม/การดูแลครบ">
   <meta name="robots" content="index,follow,max-image-preview:large">
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingennickel/index.html">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- === Open Graph / Twitter (i18n-updatable) === -->
@@ -16,6 +17,7 @@
   <meta property="og:locale" id="ogLocale" content="th_TH">
   <meta property="og:title" id="ogTitle" content="KEMTEK NI-508 • Electroless Nickel (Mid-P)">
   <meta property="og:description" id="ogDesc" content="EN Mid-P เสถียร เงาสูง แข็ง ทนกัดกร่อน อัตราการสะสม ~13–20 µm/h พร้อมแนวทางควบคุม/ปรับเติม">
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingennickel/index.html">
   <meta property="og:url" id="ogURL" content="">
   <meta property="og:image" content="https://i.imgur.com/j7SpCDD.jpeg">
   <meta property="og:image:alt" content="Electroless Nickel plating bath">
