--- a/products/platingcoating/nickelplating/troubleshootingnickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingnickel/index.html
@@ -8,6 +8,7 @@
   <title id="metaTitle" data-i18n-key="meta_title">Nickel A-Brite • ยาเงานิเกิ้ล | Baume Chemical</title>
   <meta name="description" id="metaDesc" content="ยาเงานิเกิ้ล A-Brite สำหรับงานชุบนิเกิ้ลทั้งถังกลิ้งและถังแขวน เงาสูง กลบรอยทรายดี ครอบคลุมซอกมุม และรองรับโครเมียมได้ยอดเยี่ยม">
   <meta name="robots" content="index,follow,max-image-preview:large">
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingnickel/index.html">
   <meta name="theme-color" content="#2c5e4e">
 
   <!-- Open Graph / Twitter (i18n-updatable) -->
@@ -16,6 +17,7 @@
   <meta property="og:locale" id="ogLocale" content="th_TH">
   <meta property="og:title" id="ogTitle" content="Nickel A-Brite • Bright Nickel">
   <meta property="og:description" id="ogDesc" content="เงาสูง กลบรอยทรายดี ครอบคลุมซอกมุม รองรับโครเมียม">
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingnickel/index.html">
   <meta property="og:url" id="ogURL" content="">
   <meta property="og:image" content="https://i.imgur.com/j7SpCDD.jpeg">
   <meta property="og:image:alt" content="Bright nickel plating finish">
